data/derived/comb/progs/unify/prog1902.ml.out
Characters 83-85:
  ( pos + 1, mulByDigit ( 10 ** pos) l2 ) in 
                          ^^
Error: This expression has type int but an expression was expected of type
         float
